--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,11 @@ body {
    overflow-y: scroll;
 }
 
+#app {
+   padding-bottom: 200px;
+
+}
+
 .image {
    display: grid;
    justify-content: center;
@@ -31,6 +36,8 @@ body {
 
 .nama {
    text-align: center;
+   margin-top: 20px;
+   margin-bottom: 30px;
 }
 
 .nama h1{
@@ -92,10 +99,29 @@ a {
    color: #B8A739;
 }
 
+.contact {
+   margin: auto;
+   display: flex;
+   justify-content: space-around;
+   width: 200px;
+   height: 100px;
+   align-items: center;
+   /* background-color:red */
+}
+
+.contact img:hover {
+   transform: scale(1.2);
+   -webkit-transform: scale(1.2);
+   -moz-transform: scale(1.2);
+   -ms-transform: scale(1.2);
+   -o-transform: scale(1.2);
+}
+
+
 /* STYLE CERTIFICATE AWAL */
 
 
-.certificates {
+.card-nama {
    margin-top: -30px;
    display: grid;
    align-items: center;
@@ -123,7 +149,7 @@ a {
    /* text-decoration: underline rgba(128, 128, 128, 0.161); */
 }
 
-.profil-certi img {
+.profil-nama img {
    width: 80px;
    height: 80px;
    margin-right: 10px;
@@ -131,26 +157,26 @@ a {
    /* background-color: white; */
 }
 
-.ss {
+.tengah {
    display: grid;
    align-items: center;
    justify-content: center;
 }
 
-.s {
+.tengah2 {
    margin-bottom: -20px;
 }
 
-.ss h1 {
+.tengah h1 {
    font-size:20px
 }
 
-.ss h4 {
+.tengah h4 {
    font-size:13px;
    opacity: .5;
 }
 
-.ss h1, .ss h4 {
+.tengah h1, .tengah h4 {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
@@ -182,7 +208,57 @@ a {
 
 /* STYLE CERTIFICATE AKHIR */
 
+/* ABOUT */
 
+.about-skill {
+   display: grid;
+   justify-content: center;
+   align-items: center;
+   margin: auto;
+   width: 100%;
+   height: 200px;
+   /* background: yellow; */
+   padding-bottom: 1000px;
+}
+
+.isi-about {
+   padding-left: 20px;
+   padding-right: 20px;
+   /* background-color: red */
+}
+
+.isi-about h1 {
+   text-align: center;
+   color: #B8A739;
+}
+
+.isi-about h2 {
+   /* text-align: center; */
+   color: rgb(94, 94, 94);
+}
+
+.skills {
+   padding: .006px 0px .006px 0px;
+}
+
+
+.isi-about p {
+   color: #484848;
+   font-size: 18px;
+   line-height: 30px;
+}
+
+p.isi-skill {
+   margin-top: -15px;
+   color: #7D7D7D;
+   margin-bottom: 20px;
+}
+
+.kosong {
+   margin-bottom: 200px;
+}
+
+/* AKHIR AABOUT */
 
 
 /* TOMBOL KELUAR */
@@ -237,5 +313,18 @@ a {
 .certi img {
    width: 250px;
 
+}
+
+
+}
+
+@media screen and (min-width: 900px) {
+.about-skill {
+
+   width: 900px;
+   /* background: yellow; */
+}
+.isi-about p {
+   font-size: 20px;
 }
 }
