--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,17 @@ a {
    justify-content: space-around;
 }
 
+.show-full {
+   width: 100%;
+   height: 100vh;
+   background-color: black;
+   position: fixed;
+   top: 0;
+   z-index: 100;
+   opacity: .65;
+}
+
+
 
 
 /* STYLE CERTIFICATE AKHIR */
@@ -275,38 +286,150 @@ p.isi-skill {
 
 /* TOMBOL KELUAR */
 
-.keluar {
+.kanan {
    width: 100%;
+   height: 20px;
+   background-color: red
+}
+
+.keluar-isi-about,
+.keluar-isi-certi {
+   width: 90%;
+   margin: auto;
    height: 70px;
    background-color: #B8A739;
    color: white;
-   position: fixed;
-   bottom: 0;
-   left: 0;
-   right: 0;
    display: grid;
    justify-content: center;
+   position: fixed;
+   bottom: 0;
+   right: 0;
+   left: 0;
    align-items: center;
-   border-radius:40px 40px 0px 0px;
-   -webkit-border-radius:40px 40px 0px 0px;
-   -moz-border-radius:40px 40px 0px 0px;
-   -ms-border-radius:40px 40px 0px 0px;
-   -o-border-radius:40px 40px 0px 0px;
+   border-radius:40px;
+   -webkit-border-radius:40px;
+   -moz-border-radius:40px;
+   -ms-border-radius:40px;
+   -o-border-radius:40px;
    transition: .5s;
    -webkit-transition: .5s;
    -moz-transition: .5s;
    -ms-transition: .5s;
    -o-transition: .5s;
+   cursor: pointer;
 }
 
-.keluar:hover {
-   border-radius: 0px;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   -ms-border-radius: 0px;
-   -o-border-radius: 0px;
-   background-color: #ceb82c;
+.keluar-isi-about:hover,
+.keluar-isi-certi:hover {
+   background-color: #f1da48;
+   color: #484848;
 }
+
+
+/* REVISI */
+
+.ov-y {
+   overflow-y: hidden;
+}
+.tampil-kan {
+   background-color: white;
+   position: fixed;
+   margin: auto;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   text-align: center;
+   width: 0px;
+   height: 0px;
+   animation: tampil 1s forwards;
+   -webkit-animation: tampil 1s forwards;
+   border-radius: 50px;
+   -webkit-border-radius: 50px;
+   -moz-border-radius: 50px;
+   -ms-border-radius: 50px;
+   -o-border-radius: 50px;
+   overflow-y: auto;
+   text-align: left;
+}
+
+.d-none {
+   display: none;
+   animation: opacityMuncul 1s forwards;
+   -webkit-animation: opacityMuncul 1s forwards;
+}
+.d-hilang {
+   display: block;
+   animation: opacityHilang 1s forwards;
+   -webkit-animation: opacityHilang 1s forwards;
+   
+}
+.relative {
+   position: relative;
+}
+.d-block {
+   display: block;
+   animation: opacityMuncul 1s forwards;
+   -webkit-animation: opacityMuncul 1s forwards;
+}
+
+.exit {
+   animation: keluarTampil 1s forwards;
+   -webkit-animation: keluarTampil 1s forwards;
+}
+
+@keyframes opacityMuncul {
+   0% {
+      opacity: 0;
+   } 100% {
+      opacity: 1;
+   }
+}
+
+@keyframes opacityHilang {
+   0% {
+      opacity: 1;
+   } 100% {
+      opacity: 0;
+   }
+}
+
+@keyframes tampil {
+   0% {
+      width: 50px;
+      height: 50px;
+      background-color: #B8A739
+   } 50% {
+      width: 100%;
+      height: 50px;
+      background-color: #ae9c28
+
+   } 100% {
+      width: 100%;
+      height: 100vh;
+}
+}
+
+@keyframes keluarTampil {
+   0% {
+      width: 100%;
+      height: 100vh;
+   } 50% {
+      width: 100%;
+      height: 50px;
+      background-color: #ae9c28
+
+   } 100% {
+      
+      width: 00px;
+      height: 00px;
+      background-color: #B8A739
+}
+}
+
+
+/* AKHIR REVISI */
+
 
 
 
